#16-CTS Add all API methods for the entity [Orders] done
